--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,22 @@
     background: #fff;
 }
 
+@media screen and (max-width: 500px) {
+    .header, .footer {
+        display: none;
+    }
+}
+
 .site-layout-background {
     background: #fff;
 }
-.logo{
+
+.logo {
     user-select: none;
     height: 32px;
     margin: 16px;
     background: rgba(255, 255, 255, 0);
-    font-family:Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+    font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
     color: #00448b;
     font-size: 20px;
     line-height: 32px;
@@ -18,18 +25,41 @@
     font-weight: bolder;
     /*box-shadow: 0 0 5px #0b12cd;*/
 }
-.minilogo{
+
+.minilogo {
     user-select: none;
     height: 32px;
     margin: 16px;
     background: rgba(38, 45, 95, 0);
-    font-family:Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+    font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
     color: #00448b;
     font-size: 20px;
     line-height: 32px;
     text-align: center;
     font-weight: bolder;
 }
-.content{
+
+.content {
     height: 100vh;
+}
+
+div::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+div::-webkit-scrollbar-track {
+    background: rgb(179, 177, 177);
+}
+
+div::-webkit-scrollbar-thumb {
+    background: rgb(136, 136, 136);
+}
+
+div::-webkit-scrollbar-thumb:hover {
+    background: rgb(100, 100, 100);
+}
+
+div::-webkit-scrollbar-thumb:active {
+    background: rgb(68, 68, 68);
 }
