--- a/src/Components/BugTableRowExpan.css
+++ b/src/Components/BugTableRowExpan.css
@@ -7,14 +7,21 @@
     font-size: 22px;
     margin-right: 10px;
 }
+.rowExspanCon{
+    overflow: hidden;
+    transition: all 0.4s;
+    height: 0px;
+}
+.rowExspanCon_close{
+    max-height: 0;
+
+}
+.rowExspanCon_open{
+    max-height: 2000px;
+}
 @media screen and (max-width: 750px){
     .timeline{
         width: 100% !important;
-    }
-}
-@media screen and (max-width: 500px){
-    .exspanHeader2{
-        display: none;
     }
 }
 
